2009-11-19  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Handle bindings as a method in genmenu.

2009-11-19  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add help texts to genmenu command line options.

2009-11-16  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Prevent delayed crashes of non-DMP applications in Application._dynamic_menu.

2009-11-11  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Fix return values of db connection retry results.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix crash in pytis_update_rights_redundancy db function.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp:
	When disabling system rights in tools/dmp, delete the right.
	

2009-10-27  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	Make cleanup in TutorialTest a bit more robust.

2009-10-27  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Don't try to include menu items without parent.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add some grant's to DMP functions.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add extended menu preview to the roles administration form.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix update rules for ev_pytis_action_rights.

2009-10-22  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't compare status when checking rights for redundancy.

2009-10-22  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Remove redundant rights from the view, not from the table.

2009-10-22  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add confirmation dialog to removal of redundant rights.

2009-10-22  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add action for removal of redundant rights.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py: